
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int perror (char*) ;
 int printf (char*) ;
 int quit () ;
 int send (int,char*,int,int ) ;

int sendbuf(int socket,char *buffer,int len)
{
    int j;

    j=send(socket,buffer,len,0);
    if(j==0)
    {
        printf("[-] server closed the socket\n");
        quit();
    }
    if(j<0)
    {
        perror("[-] Send data error");
        quit();
    }
    return j;
}
